--- a/frmMain.resx
+++ b/frmMain.resx
@@ -2831,6 +2831,55 @@
         nvC7j1BwOHhmE0uL8NKhsmLwwyKYsXwIsJziNwsW/H+4eGN6aKQ8fAAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="usersToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        Qk1mCgAAAAAAADYEAAAoAAAAMAAAACEAAAABAAgAAAAAAAAAAAAAAAAAAAAAAAABAAAAAQAAAAAA/xgQ
+        AP8IGAD/ECEA/zEpAP8YMQD/QjEA/xg5AP8hQgD/Y0IA/2tSAP8pWgD/MWMA/zFrAP85cwD/OXsA/6V7
+        AP9ChAD/tYQA/8aMAP/epQD/KRgI/wgIEP8QEBD/GBAQ/xAYEP8YIRD/CCkQ/zkpEP8AABj/GBgY/wAA
+        If8YGCH/ACEh/yEpIf8AGCn/GBgp/yEhKf8IKSn/KSkp/wgAMf8AKTH/KSkx/zExMf8xMTn/QkJC/wgA
+        Sv85Qkr/EABS/wBKUv9SUlL/Skpa/xAAY/8AWmP/Y2Nj/xAAa/9aWmv/AGNz/3Nzc/8YAHv/Y2N7/3t7
+        e/8Ac4T/c3OM/wCEjP+MjIz/GACU/xgAnP97hJz/AJSc/5ycnP8hAK3/jIyt/62trf8hAL3/lJy9/wC1
+        vf+9vb3/IQDG/6Wlzv8Avc7/zs7O/7W13v8Azt7/3t7e/73G7/8A3u//7+/v/87O//8A7///////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////TT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PVT/////////////PQoQEBAQEBAQ
+        EBAQAUJCNzVMTExMTExMTExMTExABQwMDAwMBU3/////////////UQQUFBQUFBQUFBQSKE5OSjFZWVlZ
+        WVlZWVlZWVk5CxERERERCE3//////////////z0EExQUFBQUFBIVQ05OTihTWVlZWVlZWVlZWVkhDxER
+        ERERBVH///////////////9NMhwGKhgJBihDTk5OTkIpVllZWVlZWVlZWUAIERERERERAv//////////
+        ////////VCBLWFgzLk5OTk5OTk47KVZZWVBMWVlZUBsPEREREREOK///////////////////NkhYWFhY
+        LENOTk5OTk5OOyNFKTMzJkw+Ag0REREREREIRv//////////////////KlhYWFhYSDROTk5OTk5OTkMX
+        T1hYTxcHDxEREREREQ0i//////////////////9UL1hYWFhYVShOTk5OTk5OTjA8WFhYWEQFDwwOERER
+        CxlR//////////////////9NM1hYWFhYWB1HTk5OTk5OOwBVWFhYWFgXIDwvAgMaNlf/////////////
+        ////////KlhYWFhYSzIrKCQsHzQoMitYWFhYWFgsWFhYSypX////////////////////////LVJYWFhY
+        M0YrP1hYVS82/y1YWFhYWFgsWFhYWD82////////////////////////TSpVWFhEKzo/WFhYWFgqTTJS
+        WFhYWFUqWFhYWFgq/////////////////////////0YqPDMtVCBYWFhYWFhLMkY4WFhYWD88WFhYWFgz
+        Tf////////////////////////9XTVH/STxYWFhYWFhYKv8rRFhYSyxVWFhYWFg8Tf//////////////
+        ////////////////PUtYWFhYWFhYLFdXNioqF1VYWFhYWFg8Tf//////////////////////////////
+        PUtYWFhYWFhYM1H/////LVVYWFhYWFgvVP//////////////////////////////PUhYWFhYWFhYLP//
+        ////QURYWFhYWFUr////////////////////////////////TTNYWFhYWFhYKv//////VyBVWFhYWC9J
+        /////////////////////////////////ypVWFhYWFg/Pf///////0ksS1hSLzb/////////////////
+        /////////////////0kvWFhYWE8gV/////////9RNi0tRv//////////////////////////////////
+        //89LEhLRCBR////////////////////////////////////////////////////////UT09QVf/////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        /////////////////////////////w==
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAQAEBAQAAAAAAAoAQAARgAAABAQAAAAAAAAaAUAAG4BAAAgIBAAAAAAAOgCAADWBgAAICAAAAAA
