--- a/frmUser.resx
+++ b/frmUser.resx
@@ -123,66 +123,109 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="bindingNavigatorAddNewItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFKSURBVDhPYxi84O4C9v+35nH+vzqH6//FGbz/ocLEg+tA
-        jX8eNf7/87Dh/8nJAqQbcH46L9yAgz0ipBtwfJIgUHPd/z8Pqv7vaBcnbMClmTz/z07l+38SqPFIv9D/
-        fd0iQM3l///eK/q/vkHm/6oauf9LKxX/zy9V/j+rSBXTwFNAf/55WA/UVAvElf//3CsB4rz/f+9m/v97
-        J/n/39tx///djADikP+TcjQxDTjUKwx27t/7pUCNBUCN2UCNqUCNCf//3YoGagz7/+9G0P9/1/3+d6Xp
-        Yhqws13i/5Zmqf/rwM6V/7+kQvH/31sxQI3h/6fmafyfkKX1vztD9397qv7/5kRDwmEyG+hPkHP/3Qj4
-        35OhQ1gDOgD5898NfyD2+9+arE+6Ad3pumD/gnB9nBHpBrQkGfxviDf8XxNr/L8y2oR0A+gEGBgAJCPY
-        nnX8iGkAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAUpJREFUOE9jGLzg7gL2/7fmcf6/Oofr/8UZvP+hwsSD60CNfx41/v/zsOH/yckC
+        pBtwfjov3ICDPSKkG3B8kiBQc93/Pw+q/u9oFydswKWZPP/PTuX7fxKo8Ui/0P993SJAzeX//94r+r++
+        Qeb/qhq5/0srFf/PL1X+P6tIFdPAU0B//nlYD9RUC8SV///cKwHivP9/72b+/3sn+f/f23H//92MAOKQ
+        /5NyNDENONQrDHbu3/ulQI0FQI3ZQI2pQI0J///digZqDPv/70bQ/3/X/f53peliGrCzXeL/lmap/+vA
+        zpX/v6RC8f/fWzFAjeH/p+Zp/J+QpfW/O0P3f3uq/v/mREPCYTIb6E+Qc//dCPjfk6FDWAM6APnz3w1/
+        IPb735qsT7oB3em6YP+CcH2cEekGtCQZ/G+IN/xfE2v8vzLahHQD6AQYGAAkI9iedfyIaQAAAABJRU5E
+        rkJggg==
 </value>
   </data>
   <data name="bindingNavigatorDeleteItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFvSURBVDhPtZBNKMNhHMd3Vd5K7eKCWjkgk7yEZDKksciE
-        yMwkBw6LhHZxcCDlQg64SA4kJeVE4jRv89qaWn8tUtoF/7g8H2Ootb+x4nt56nm+38/v+/xUfyJcJ9Bt
-        BMcOH1eRiZV5RGcVwqyHrfWwELweWJoJ9rC2AL0mRLse0VEBcxOKkLeGwlwGIz2h75w6ApC6bERjAdia
-        gkxiyIow5cKkPWxDFYvTiMrUdxDDVnCfwVh/AOo/P2zhhccFzcWBLxmzEPV50Nfyu/Cn2N/1V85DGNKh
-        Rhth+EaCxkLISUDWxvOgjYXa7F/Wv7kGUz4UJeKzGODi6H25d2l+yPLsDwu8v4NWHY8lSbhL0/HtbX8F
-        GLXh1MQgnxwoQ3h5hkEL6JI5TlPj21gNMd6WZyC1VSN7r0Mh7G4i56pxpkQhdTWA/KQ4aUcTh+x0KACm
-        RpBSo3HrM0G6Uq7pl2zvhvNDBcClE8YH4HDv2/A/SKV6BYojAxyEJtLJAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAW9JREFUOE+1kE0ow2Ecx3dV3krt4oJaOSCTvIRkMqSxyITIzCQHDouEdnFwIOVC
+        DrhIDiQl5UTiNG/z2ppafy1S2gX/uDwfY6i1v7Hie3nqeb7fz+/7/FR/Ilwn0G0Exw4fV5GJlXlEZxXC
+        rIet9bAQvB5Ymgn2sLYAvSZEux7RUQFzE4qQt4bCXAYjPaHvnDoCkLpsRGMB2JqCTGLIijDlwqQ9bEMV
+        i9OIytR3EMNWcJ/BWH8A6j8/bOGFxwXNxYEvGbMQ9XnQ1/K78KfY3/VXzkMY0qFGG2H4RoLGQshJQNbG
+        86CNhdrsX9a/uQZTPhQl4rMY4OLofbl3aX7I8uwPC7y/g1YdjyVJuEvT8e1tfwUYteHUxCCfHChDeHmG
+        QQvokjlOU+PbWA0x3pZnILVVI3uvQyHsbiLnqnGmRCF1NYD8pDhpRxOH7HQoAKZGkFKjceszQbpSrumX
+        bO+G80MFwKUTxgfgcO/b8D9IpXoFiiMDHIQm0skAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="bindingNavigatorMoveFirstItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAEqSURBVDhPYxg8oHDW8/9NC57/z5z4+D9UCAOEtz/AKceQ
-        O/PZ/1VH3v/HpSi++8H/4IZruA3ImPL0/8J9H7Aqiu95+H/p/v///asv4DYgoefJ/2lb3mMoimi/D9ac
-        Oev/f6/SE7gNiOx69L939QcURaGt98CaW9cBbe/8+98l/wBuAwKbH/6vm/8Orii45e7/RXv//+8Aas6Y
-        8/O/Xd3P//YZ23Eb4FF1/3/+tDcoiuyKb/9Pn/P7v3/Xt/86he/+WySsx22Afend/9mTX2Mo0k85/9+k
-        6MV/laxP/40jl+E2wCLvzv/U/tdYFRkknfgvm/b1v27wPNwGGGbd/h/W8hKnIv3Uy/81fKfhNkAn7cZ/
-        v+qHeBWpeEzAbYBT7pX/IAV4FQ1CwMAAAPB2wKul5ZpwAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAASpJREFUOE9jGDygcNbz/00Lnv/PnPj4P1QIA4S3P8Apx5A789n/VUfe/8elKL77
+        wf/ghmu4DciY8vT/wn0fsCqK73n4f+n+///9qy/gNiCh58n/aVveYyiKaL8P1pw56/9/r9ITuA2I7Hr0
+        v3f1BxRFoa33wJpb1wFt7/z73yX/AG4DApsf/q+b/w6uKLjl7v9Fe///7wBqzpjz879d3c//9hnbcRvg
+        UXX/f/60NyiK7Ipv/0+f8/u/f9e3/zqF7/5bJKzHbYB96d3/2ZNfYyjSTzn/36ToxX+VrE//jSOX4TbA
+        Iu/O/9T+11gVGSSd+C+b9vW/bvA83AYYZt3+H9byEqci/dTL/zV8p+E2QCftxn+/6od4Fal4TMBtgFPu
+        lf8gBXgVDULAwAAA8HbAq6XlmnAAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="bindingNavigatorMovePreviousItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAC2SURBVDhPYxg6ILz9wX8ok3QQ3/3gf3DDNfIMiO95+H/p
-        /v///asvkG5ARPt9sObMWf//e5WeIM2A0NZ7YM2t64C2d/7975J/gHgDglvu/l+09///DqDmjDk//9vV
-        /fxvn7GdNBfYFd/+nz7n93//rm//dQrf/bdIWE96GOinnP9vUvTiv0rWp//GkctINwAEDJJO/JdN+/pf
-        N3geeQaAgH7q5f8avtPINwAEVDwmUGbAYAUMDADQFGCYBLpQVQAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAALZJREFUOE9jGDogvP3BfyiTdBDf/eB/cMM18gyI73n4f+n+///9qy+QbkBE+32w
+        5sxZ//97lZ4gzYDQ1ntgza3rgLZ3/v3vkn+AeAOCW+7+X7T3//8OoOaMOT//29X9/G+fsZ00F9gV3/6f
+        Puf3f/+ub/91Ct/9t0hYT3oY6Kec/29S9OK/Stan/8aRy0g3AAQMkk78l037+l83eB55BoCAfurl/xq+
+        08g3AARUPCZQZsBgBQwMANAUYJgEulBVAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="bindingNavigatorMoveNextItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAACjSURBVDhPYxh8oHDW8/9QJnkgd+az/wnd98g3JGPK0//z
-        9v/+n9B1hzxDEnqe/J+979f/zq1//7uVXibdkMiuR/+nbPv1v2Tp3/8J0//+t8k9S5ohgc0P/7eufQ/W
-        bFzy5b909LX/xpHLiDfEo+r+/5K57+CaFV16SHOBfend/4Etz8jTDAIWeXf+2xRcIU8zCBhm3SZfMwjo
-        pN0gX/NQBAwMAKB+X6AHNEI4AAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAKNJREFUOE9jGHygcNbz/1AmeSB35rP/Cd33yDckY8rT//P2//6f0HWHPEMSep78
+        n73v1//OrX//u5VeJt2QyK5H/6ds+/W/ZOnf/wnT//63yT1LmiGBzQ//t659D9ZsXPLlv3T0tf/GkcuI
+        N8Sj6v7/krnv4JoVXXpIc4F96d3/gS3PyNMMAhZ5d/7bFFwhTzMIGGbdJl8zCOik3SBf81AEDAwAoH5f
+        oAc0QjgAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="bindingNavigatorMoveLastItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAEsSURBVDhPYxhcoHDW8/9QJgYAyTUteP4/c+JjnGoYcmc+
-        +5/QfQ+rApDcqiPv/4e3P8BtQMaUp//n7f/9P6HrDoYikNzCfR/+Bzdcw21AQs+T/7P3/frfufXvf7fS
-        yygKQXLTtrz/7199AbcBkV2P/k/Z9ut/ydK//xOm//1vk3sWrhgk17v6w3+v0hO4DQhsfvi/de17sGbj
-        ki//paOv/TeOXAbWAJKrm//uv0v+AdwGeFTd/18y9x1cs6JLD1wxSC5/2pv/9hnbcRtgX3r3f2DLMwzN
-        IACSy578+r9FwnrcBljk3flvU3AFQzMIgORS+1/DvYQVGGbdxqoZBEByYS0v/+sGz8NtgE7aDZySIDm/
-        6of/NXyn4TYAH3DKvfJfxWMCGEOFBgVgYAAAvtG/s7kMTpwAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAASxJREFUOE9jGFygcNbz/1AmBgDJNS14/j9z4mOcahhyZz77n9B9D6sCkNyqI+//
+        h7c/wG1AxpSn/+ft//0/oesOhiKQ3MJ9H/4HN1zDbUBCz5P/s/f9+t+59e9/t9LLKApBctO2vP/vX30B
+        twGRXY/+T9n263/J0r//E6b//W+TexauGCTXu/rDf6/SE7gNCGx++L917XuwZuOSL/+lo6/9N45cBtYA
+        kqub/+6/S/4B3AZ4VN3/XzL3HVyzoksPXDFILn/am//2GdtxG2Bfevd/YMszDM0gAJLLnvz6v0XCetwG
+        WOTd+W9TcAVDMwiA5FL7X8O9hBUYZt3GqhkEQHJhLS//6wbPw22ATtoNnJIgOb/qh/81fKfhNgAfcMq9
+        8l/FYwIYQ4UGBWBgAAC+0b+zuQxOnAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnSearch.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAiYSURBVHhe7Z13qB1FFIdj7wXsvYuoGLA3ooiKxhpEbNgr
+        9hKNoGIXexDEXhGNihUbisEWsGtQo4K9xxp77Pr7klzyPDn33b3v3Xffzsz54PtHErNzdu7s7syZM0OC
+        IAiCIAiCIAiCIC1mlcvKteWWcge5i9xZDpebytXkAjJInIUkN/gc+YB8T/4l/63od/J5ea08XA6Vs8ig
+        pswk15Xc8Feld1P76yR5h9xbxihRE5aUp8l3pHfTBsrf5N1yGzmzDLoMv/bbZTvD+kDJ4+UoOY8MBph1
+        5CPSuxFVZSjnpr0uX5Hj5Vvyc/m79P5OFb+Wx8u5ZNBhGOpvkV7gm/mBvE2OlNvKleUcsjd4l1hErif3
+        kRfLZ+Rk6f0bnh/JXSX/r6Cf8HzlLfxH6QW7p39KRofD5PKyk8wp+XQcLT+W3r9vfUx2+jqKYhn5hPSC
+        29MJ8mjJp183oFMOkzdLXga9a2r4szxIxmjQJjtJntVeUBuOlVvJwQzuovJM+b30rrHhXXJ+GbSAXxff
+        8l4QG74oN5N1YkF5nuxtRHhbMtMYNIHn7J3SCx4yO3eArPN3N8/8B6V3/ciotrkMDPPJJ6UXNLxfLiZT
+        gEfSnrLZY+EPOUIG0+DZ+KxsFiy+AlJ8iWLh6TnptYsJrD1k8TB7Nk56QZooN5Apw7zDNdJrH52Alchi
+        YXn2IekFh5m55WQOMHqNkl47mXnkk7JIrpReUJiaZTYuNw6R/0jbXl5uV5VFcbC0gUDm57s1oTMYHCq9
+        djOZxYtwEZCR4y26fCiXkLlzsrRtxzEy+xlDXvqYELGNZ65/DVkC3OTrpI0B7iuz5jLpNby072K+Dl6Q
+        Ng78EFgDyZKNpPcSRKcoEWYNvVVOchizexSQUOnl6r0pS06gYMi3MUESWrOi2Vv/xrJk+KWTN2DjQo7j
+        7DIL+IV/Jm0jr5fB1EwlprxtfPhkzIJjpG0ciRKLy2Aql0gbo09lqxS22jObJEfONo6182A6C8ufpI3T
+        /jJpdpO2Ub/InGf7+sr50sbqDZn0F4G3xn+FDGZkKUliq43XJjJJVpG2MVjKjF9fYOuZjdeNMknYsmUb
+        Q+JH0JytpY3ZD5J0ueR4TdrGsIUqaA45El9JG7cdZVKQDmUbgTzngt65Wtq48d+SguQH2wimgoPWsCfC
+        xo5P6aTw9vFdKIPWkCT7t7TxSypFjt23tgH07KAa3sIZqeZJQPUMe/FYQrZPp7hK2vhdJJOAYkv24tk7
+        n326Uwc5QtoYPiqTgPlre/HssQ+qs4W0MeSxmgRnSXvxvBQG1VlR2hiykYR5gtrj7YRhoSOoDsvANoaY
+        xP5IqmfZCz9RBu3hLQ+vKWuPl+KUTXZLFyEhxMZxQ1l7vCXg/WTQHt5cSt0KY7g8Le2FU3EraA+v+CVf
+        B7XncWkv/EAZtIeXSpdEcohXIoUqXkF7fCNtHNlXWXson2Yv/AwZVIc6SN6CEMvstYfqmvbCmdsOqkP5
+        ORtDnFvWHrJ+7IVTwTOozvrSxvBLmQTbSXvx78qgOntJG0MKTiUBu17txbMrOInhqyawccbGkJoCScCy
+        r1cjr/SNoO3A0q+NX1JfUl4DTpBBa9hKTyq4jR/vBcng7QmgJFzQGs4qsLFjOx37LJOBaiBeI5Lc4NBl
+        TpU2dkyuJQXDmDeTldwGh0GAY2xs3EgRSw4KQNiG3CqD5lAswsaML6gkN9RwmINtzK+S2vqBz7nSxuwp
+        mSQ8Bj6RtkGxP9CHmkCcXGbjxRkJyXK6tA1inTuOYZ0RTiS1seJzMOnzCNkM4pWFpXJIMB1+EJTMs3Gi
+        dlDyeGVRaWwSKc5dgm1fNkZUC8miauhK0it9EomiU6GMnpf9k9USurfnne1iUSzKf0/i9LGlZTZQE9Cr
+        i5ts/ZsOwTFy3jsSR+dlBwcr24ZiqdvGmdvnDEQbDz6d55XZwUvfS9I2mEdBVsNdRS6QNha4vcyWtaQ3
+        5JHtknxZ1DbgtDAbAyxiE+2x0ms86wQl1BAgtZuVUdv+9yXFNbKHlOf7pA0AUgUj507AYs8X0rabUZE8
+        gGKgp3tnByGncefYCVaQHIzltbnInVNMEPEC6AUkt5GAzz1vty8y9Jf0/vM/OBqWswO8wPBOkEMGEaeF
+        czik18aG7JsothMQoMnSCwwnayWxHcqBEYzDMrxpcM+iOwH73r2KGPit3EWmBAdA3CO99vTmw7LYTkDa
+        s1couSGPBPbM1Rl+9btK702/qkV3AqpjcXK4FxjkWcoGiTqmSHMOgrcfoqF3ZmIzi+4E1MptNXyy15Cq
+        I3XIKeDb/ibpbedu2OwdpzeL7gQMpeQOsizqBach6+gjJc/cbsL18fJKRbRWv+xx0qubVMWiOwEwrLJO
+        4AWnp5y7x83YXQ7UMezc9KHybMkI5F1HT/nVnyRJ9+Im8pbv/blWFt8JCOCRcpL0AmTls4tfHIkWpKb3
+        NemE9ww6ILN05C00m8jxZBscj4aeRCfoJwzzHDTtrSa2cqJkKOZL4lJ5ijxOsuOGl0oKWZKEQRoW27Am
+        SO80z1aOl8NlM7iJ3Ezv77YyOsE0mBi6XLLJxAvUYPiy5POPha5WRCfoEIwIo6RXULEbMkJwzBu1+3g/
+        aIfoBB2EXx318xgV2nlO90XeL8ZKzkTq75dHdIIBoPGmzvOduQTv1PJ25DOUvL3RcoRkjqKT9KcT8KIZ
+        naAC/FKHSeoVU6+QkWKMvFcS/AfkXfIGSZ4enYdt7KvLbkw0RScIohME0QkCEZ0giE4QRCcIRHSCYMpN
+        5GZ6N7mV0QkyITpBEJ0g6F8nYIk7OkEGRCcIohME0QkCEZ0giE4QRCcIRHSCYMpN5GZ6N7mVZEVVyWgO
+        ak5fOgFb2+JAr4xopxPEzc+UKp0gbn7m9NYJ4uYXgtcJ4uYXRs9OEDe/UBqdIG5+wcR3fhAEQRAEQRAE
+        QVCNIUP+A3dR1Bmg5FT3AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
